--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     // https://github.com/tensorflow/tfjs-models/tree/master/speech-commands
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "./my_model/";
+    const URL = "https://kitunene.github.io/pageoperation/my_model/";
 
     async function createModel() {
         const checkpointURL = URL + "model.json"; // model topology
@@ -50,10 +50,23 @@
         recognizer.listen(result => {
             const scores = result.scores; // probability of prediction for each class
             // render the probability scores per class
+            if (result.scores[1].toFixed(2) > 0.65){
+                window.open('https://www.google.co.jp/');
+            }else if(result.scores[0].toFixed(2) > 0.65){
+                function winClose(){
+                    open('about:blank','_self').close();
+                }
+                winClose()
+            }else if(result.scores[2].toFixed(2) > 0.65){
+                history.forward();
+            }else if(result.scores[3].toFixed(2) > 0.65){
+                history.back();
+            }
             for (let i = 0; i < classLabels.length; i++) {
                 const classPrediction = classLabels[i] + ": " + result.scores[i].toFixed(2);
                 labelContainer.childNodes[i].innerHTML = classPrediction;
             }
+
         }, {
             includeSpectrogram: true, // in case listen should return result.spectrogram
             probabilityThreshold: 0.75,
